fix(general)/scrollbar styles,components get props

--- a/src/app/layout/Layout.css
+++ b/src/app/layout/Layout.css
@@ -18,6 +18,7 @@
 		width: 90%;
 		min-height: calc(100vh - 13rem);
 		margin-top: 8rem;
+		margin-bottom: 3rem;
 		margin-inline: auto;
 
 		.LAYOUT__buttons {
@@ -32,7 +33,7 @@
 		justify-items: center;
 		align-items: center;
 		width: 100%;
-		height: 5rem;
+		height: 3rem;
 		box-shadow: var(--primary-box-shadow);
 	}
 }
