--- a/src/app/styles/global/reset.css
+++ b/src/app/styles/global/reset.css
@@ -6,4 +6,11 @@
 
 body {
 	background-color: var(--dark-color);
+	&::-webkit-scrollbar {
+		width: 0.5rem;
+	}
+	&::-webkit-scrollbar-thumb {
+		background-color: var(--gray-color);
+		border-radius: 0.125rem;
+	}
 }
