--- a/src/app/styles/global/variables.css
+++ b/src/app/styles/global/variables.css
@@ -5,6 +5,7 @@
 	--success-color: #8eb443;
 	--error-color: #d65235;
 	--light-color: #f5fcff;
+	--gray-color: #bdc5c8;
 	--dark-color: #011621;
 
 	--base-font-size: 16px;
